# admin-go-api/router/router.go
@@ -36,5 +36,6 @@ func register(router *gin.Engine) {
 	router.GET("/api/captcha", controller.Captcha)
 	router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 	router.POST("api/login", controller.Login)
+	router.POST("/api/post/add", controller.CreateSysPost)
 
 }
